som fixs
